# CRM_STATION

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  station_system_spec.md
app/: config.py  database.py  email_utils.py  main.py  models.py  router.py  scheduler.py  schemas.py
static/: index.html
